Sat Nov 28 21:30:09 1998  George Lebl  <jirka@5z.com>

	* gnome-icon-sel.c: use GnomeIconList instead of CList, fixed
	  minor possible leak with non-shown icons, and made _clear
	  take an extra parameter as a boolean wheather the non shown
	  icons are also cleared or not. Also documented the widget's
	  functions

	* gnome-icon-entry.c: fixed a small assumption about internals
	  of icon-sel and documented the functions in icon-entry

	* gnome-pixmap.c: do gtk_widget_combine_mask instead of the gdk
	  function, this fixes pixmap problems with themes in case an
	  x window is used

1998-11-28  Justin Maurer  <justin@openprojects.net>

	* gnome-app-helper.h: removed GNOMEUIINFO_SUBTREE_ITEM_STOCK macro 
	(redundant). removed right justification stuff.

	* gnome-app-helper.c: removed right justification stuff. cleaned up 
	code.
	(create_help_entries): takes one less argument now.
	(create_radio_menu_items): same.

1998-11-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-propertybox.c (gnome_property_box_append_page): Add checks
	to the entry points.
	(gnome_property_box_set_state): New function, lets you unsensitize
	the properybox.
	(gnome_property_box_changed): Check input parameters.

	API document GnomePropertyBox.

	* gnome-icon-list.c: (gnome_icon_list_new_thawed); New method to
	create an IconList which starts up life in thawed state.

1998-11-28  Stuart Parmenter  <pavlov@pavlov.net>

	* *.c
	s/gtk_container_border_width/gtk_container_set_border_width/
	s/gtk_window_position/gtk_window_set_position/
	s/gtk_notebook_current_page/gtk_notebook_get_current_page/

	* gnome-dialog.c:
        make sure that we initialize the action_area if the buttons args are
	null.  Martin: this isn't how you had just changed things, but this
	breaks Balsa the way you have it.
	
1998-11-28  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnome-client.c (client_set_value): New function.
	(client_set_string): Renamed from 'client_set_prop_from_string'.